# learn-sonar-qube

./: README.md  down.cmd  scanner.cmd  scanner_ps1.ps1  sonarqube.yml  up.cmd
cs5351-software-engineering-group-project-main/.github/workflows/: uniitest.yml
cs5351-software-engineering-group-project-main/python-preprocessor/workspace/: pyproject.toml
cs5351-software-engineering-group-project-main/python-preprocessor/workspace/python_preprocessor/define/: processing_unit.py
cs5351-software-engineering-group-project-main/python-preprocessor/workspace/python_preprocessor/define/ast_/: ast_.py
cs5351-software-engineering-group-project-main/python-preprocessor/workspace/python_preprocessor/parsing/: line_parser.py
cs5351-software-engineering-group-project-main/python-preprocessor/workspace/test/: test_folder_to_processing_units.py
nextui/sonarqube-app/: package.json
nextui/sonarqube-app/app/: page.tsx
nextui/sonarqube-app/app/api/upload/: route.ts
src/: README.md
src/python-preprocessor/: Containerfile  build.cmd  kill.cmd  start.cmd
src/python-preprocessor/workspace/python_preprocessor/: main.py  preprocess_folder.py
src/python-preprocessor/workspace/python_preprocessor/define/ast_/: if_derivative_ast.py  trivial_ast.py
src/python-preprocessor/workspace/python_preprocessor/parsing/: if_derivative_parser.py  parser.py  trivial_parser.py
src/python-preprocessor/workspace/python_preprocessor/util/: file.py
src/python-preprocessor/workspace/test/: test_if_derivative.py
(+1 files in other folders)
