[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_preprocessor"]

[project.scripts]
pypre = "python_preprocessor.main:main"

[project]
name = "python-preprocessor"
description = "Python preprocessor"
version = "0.0.0"
authors = []
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

